manifests/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uat-backend
  namespace: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uat-backend
  template:
    metadata:
      labels:
        app: uat-backend
    spec:
      imagePullSecrets:
        - name: ecr-regcred
      containers:
      - name: backend
        image: 980921740481.dkr.ecr.ap-southeast-1.amazonaws.com/backend:4ee3415
        ports:
        - containerPort: 80
