manifests/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress-dev
  namespace: my-app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /dev/api
        pathType: Prefix
        backend:
          service:
            name: dev-backend-svc
            port:
              number: 80
      - path: /uat/api
        pathType: Prefix
        backend:
          service:
            name: uat-backend-svc
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: prod-backend-svc
            port:
              number: 80
